feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -144,3 +144,13 @@
   title        = {Strona internetowa serwisu "Invoice Generator"},
   howpublished = {Dostęp zdalny (10.12.2023): \url{https://invoice-generator.com/developers}}
 }
+
+@misc{kotlin,
+  title        = {Strona internetowa języka programowania Kotlin},
+  howpublished = {Dostęp zdalny (11.12.2023): \url{https://kotlinlang.org}}
+}
+
+@misc{jvm,
+  title        = {Opis maszyny wirtualnej Java},
+  howpublished = {Dostęp zdalny (11.12.2023): \url{https://docs.oracle.com/en/database/oracle/oracle-database/21/jjdev/Oracle-JVM-overview.html}}
+}
