--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -31,7 +31,6 @@
 %------------------
 % Strona tytułowa
 %------------------
-% TODO na pewno? a nie instytut promotora?
 \instytut{Automatyki i Informatyki Stosowanej}
 \kierunek{Informatyka}
 \specjalnosc{Inżynieria Oprogramowania}
@@ -140,8 +139,6 @@ The summary presents conclusions from performance tests showing the scalability 
 % zapewniając podstawowe formatowanie.
 % \acronymlist
 % \acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
-% \acronym{PW}{Politechnika Warszawska}
-% \acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
 % \vspace{0.8cm}
 
 %--------------------------------------
@@ -153,11 +150,9 @@ The summary presents conclusions from performance tests showing the scalability 
 \vspace{1cm}         % vertical space
 \listoftablestoc     % Spis tabel.
 \vspace{1cm}         % vertical space
-\listofappendicestoc % Spis załączników
-\vspace{1cm}
+% \listofappendicestoc % Spis załączników
+% \vspace{1cm}
 \listoflistingstoc   % Spis listingów
-
-% TODO spis listingów
 
 %-------------
 % Załączniki
