feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -154,3 +154,8 @@
   title        = {Opis maszyny wirtualnej Java},
   howpublished = {Dostęp zdalny (11.12.2023): \url{https://docs.oracle.com/en/database/oracle/oracle-database/21/jjdev/Oracle-JVM-overview.html}}
 }
+
+@misc{cockburn2005hexagonal,
+  title        = {Opis architektury heksagonalnej},
+  howpublished = {Dostęp zdalny (13.12.2023): \url{https://alistair.cockburn.us/hexagonal-architecture}}
+}
