feat(thesis): WIP thesis

--- a/docs/thesis/src/wut-thesis.cls
+++ b/docs/thesis/src/wut-thesis.cls
@@ -502,6 +502,7 @@
 %-------------------
 % Spis listingów
 %-------------------
+\renewcommand*\l@lstlisting{\@dottedtocline{1}{0.5em}{2.25em}}
 \newcommand{\listoflistingstoc}{
     \lstlistoflistings
     \addcontentsline{toc}{section}{\lstlistlistingname}
